--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="libs/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="libs/fastjson-1.1.35.jar"/>
 	<classpathentry kind="lib" path="libs/substance.jar"/>
@@ -26,5 +25,6 @@
 	<classpathentry kind="lib" path="libs/xerces_2_5_0.jar"/>
 	<classpathentry kind="lib" path="libs/xml-apis-1.3.04.jar"/>
 	<classpathentry kind="lib" path="libs/xml-apis-ext-1.3.04.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
